--- a/index.html
+++ b/index.html
@@ -1,30 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://kit.fontawesome.com/1fe9a2c7df.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <div class="navbar">
-        <ol class="icon">
-            Shadman
-        </ol>
-        <div class="links">
-            <ol class="nav_link">
-             <a href="">About</a>
+    <section>
+        <div class="navbar">
+            <ol class="icon">
+                Shadman
             </ol>
-            <ol class="nav_link">
-             <a href="">Experince</a>
-            </ol>
-            <ol class="nav_link">
-             <a href="">Projects</a>
-            </ol>
-            <ol class="nav_link">
-             <a href="">Contact</a>
-            </ol>
+            <div class="links">
+                <ol class="nav_link">
+                 <a href="">About</a>
+                </ol>
+                <ol class="nav_link">
+                 <a href="">Experince</a>
+                </ol>
+                <ol class="nav_link">
+                 <a href="">Projects</a>
+                </ol>
+                <ol class="nav_link">
+                 <a href="">Contact</a>
+                </ol>
+            </div>
         </div>
-    </div>
+    </section>
+    <section>
+        <div class="homepage">
+            <div class="mypic" id="t1">
+                <img src="./images/sadman_ajaira_pic.jpg" alt="">
+            </div>
+            <div class="myself" id="t1">
+                <h5 style="margin-top: 5px; margin-bottom: 5px;">Hello, I'm</h5>
+                <h2 style="margin-top: 5px; margin-bottom: 5px;">Shadman</h2>
+                <h4 style="margin-top: 5px;">Frontend Developer</h4>
+                <div class="mybuttons" style="margin-top: -19px; margin-bottom: 5px;">
+                  <button>Download CV</button>
+                  <button id="ct">Contact Info</button>
+                </div>
+                <div class="mylinks" style="margin-top: -19px; margin-bottom: 5px;">
+                  <i class="fa-brands fa-github" id="lol"></i>
+                  <i class="fa-brands fa-facebook" id="lol"></i>
+                </div>
+              </div>
+        </div>
+    </section>
 </body>
 </html>
