--- a/index.html
+++ b/index.html
@@ -49,5 +49,11 @@
               </div>
         </div>
     </section>
+    <section>
+        <div class="aboutemetext">
+            <h5 style="margin-top: 5px; margin-bottom: 5px;">Get to Know More</h5>
+            <h1 style="margin-top: -24px; margin-bottom: 5px;">About Me</h1>
+        </div>
+    </section>
 </body>
 </html>
