--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </ol>
             <div class="links">
                 <ol class="nav_link">
-                 <a href="">About</a>
+                 <a href="#about">About</a>
                 </ol>
                 <ol class="nav_link">
                  <a href="">Experince</a>
@@ -49,10 +49,28 @@
               </div>
         </div>
     </section>
-    <section>
+    <section id="about">
         <div class="aboutemetext">
             <h5 style="margin-top: 5px; margin-bottom: 5px;">Get to Know More</h5>
             <h1 style="margin-top: -24px; margin-bottom: 5px;">About Me</h1>
+        </div>
+        <div class="aboutcontainer">
+            <div class="aboutbox">
+                <img src="./images/1702923877779.jpg" alt="" srcset="">
+            </div>
+            <div class="aboutbox">
+                <div class="abbox">
+                    <i class="fa-solid fa-award"></i>
+                    <h2>Experience</h2>
+                    <h4 style="margin-top: 5px; margin-bottom: 5px;">2+ Years</h4>
+                    <h4 style="margin-top: 5px; margin-bottom: 5px;">App Development</h4>
+                </div>
+                <div class="abbox">
+                    <i class="fa-solid fa-graduation-cap"></i>
+                    <h2>Education</h2>
+                    <h4 style="margin-top: 5px; margin-bottom: 5px;">B.Sc. Bachelors Degree</h4>
+                </div>
+            </div>
         </div>
     </section>
 </body>
