Fix navigation link typo and adjust styling in about section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                  <a href="#about">About</a>
                 </ol>
                 <ol class="nav_link">
-                 <a href="">Experince</a>
+                 <a href="">Experience</a>
                 </ol>
                 <ol class="nav_link">
                  <a href="">Projects</a>
@@ -58,7 +58,7 @@
             <div class="aboutbox">
                 <img src="./images/1702923877779.jpg" alt="" srcset="">
             </div>
-            <div class="aboutbox">
+            <div class="aboutbox" id="aboutbox">
                 <div class="abbox">
                     <i class="fa-solid fa-award"></i>
                     <h2>Experience</h2>
@@ -69,6 +69,11 @@
                     <i class="fa-solid fa-graduation-cap"></i>
                     <h2>Education</h2>
                     <h4 style="margin-top: 5px; margin-bottom: 5px;">B.Sc. Bachelors Degree</h4>
+                </div>
+                <div class="abbox">
+                    <h5>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam explicabo ad nam ut harum hic nesciunt fuga quod quae officiis necessitatibus, quam fugit. Expedita minus voluptates accusamus sint atque aliquid!
+                    </h5>
                 </div>
             </div>
         </div>
