--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                  <a href="#about">About</a>
                 </ol>
                 <ol class="nav_link">
-                 <a href="">Experience</a>
+                 <a href="#experience">Experience</a>
                 </ol>
                 <ol class="nav_link">
                  <a href="">Projects</a>
@@ -75,6 +75,50 @@
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam explicabo ad nam ut harum hic nesciunt fuga quod quae officiis necessitatibus, quam fugit. Expedita minus voluptates accusamus sint atque aliquid!
                     </h5>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section id="experience">
+        <div class="aboutemetext">
+            <h5 style="margin-top: 5px; margin-bottom: 5px;">Explore My</h5>
+            <h1 style="margin-top: -24px; margin-bottom: 5px;">Experience</h1>
+        </div>
+        <div class="expcontainer">
+            <div class="expbox">
+                <h2>Frontend Development</h2>
+                <div class="frnt">
+                    <div class="t1">
+                        <div class="tt1">
+                            <h3><i class="fa-solid fa-circle-check"></i>HTML</h3>
+                            <h5>Experienced</h5>
+                        </div>
+                        <div class="tt1">
+                            <h3><i class="fa-solid fa-circle-check"></i>CSS</h3>
+                            <h5>Intermediate</h5>
+                        </div>
+                        <div class="tt1">
+                            <h3><i class="fa-solid fa-circle-check"></i>SASS</h3>
+                            <h5>Basic</h5>
+                        </div>
+                    </div>
+                    <div class="t1">
+                        <div class="tt1">
+                            <h3><i class="fa-solid fa-circle-check"></i>JS</h3>
+                            <h5>Experienced</h5>
+                        </div>
+                        <div class="tt1">
+                            <h3><i class="fa-solid fa-circle-check"></i>JSX</h3>
+                            <h5>Intermediate</h5>
+                        </div>
+                        <div class="tt1">
+                            <h3><i class="fa-solid fa-circle-check"></i>React</h3>
+                            <h5>Basic</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="expbox">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, deserunt. Accusamus asperiores ullam tempore. Eveniet voluptates culpa doloribus! Nemo, dolore sequi suscipit voluptatibus veniam autem odit consequatur maxime perspiciatis magnam.
             </div>
         </div>
     </section>
