--- a/index.html
+++ b/index.html
@@ -118,7 +118,29 @@
                 </div>
             </div>
             <div class="expbox">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, deserunt. Accusamus asperiores ullam tempore. Eveniet voluptates culpa doloribus! Nemo, dolore sequi suscipit voluptatibus veniam autem odit consequatur maxime perspiciatis magnam.
+                <h2>Backend Development</h2>
+                <div class="frnt">
+                    <div class="t1">
+                        <div class="tt1">
+                            <h3><i class="fa-solid fa-circle-check"></i>Express JS</h3>
+                            <h5>Experienced</h5>
+                        </div>
+                        <div class="tt1">
+                            <h3><i class="fa-solid fa-circle-check"></i>Node JS</h3>
+                            <h5>Intermediate</h5>
+                        </div>
+                    </div>
+                    <div class="t1">
+                        <div class="tt1">
+                            <h3><i class="fa-solid fa-circle-check"></i>Git</h3>
+                            <h5>Experienced</h5>
+                        </div>
+                        <div class="tt1">
+                            <h3><i class="fa-solid fa-circle-check"></i>SQL</h3>
+                            <h5>Intermediate</h5>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
