Update social media icon color in index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   <button id="ct">Contact Info</button>
                 </div>
                 <div class="mylinks" style="margin-top: -19px; margin-bottom: 5px;">
-                  <i class="fa-brands fa-github" id="lol"></i>
+                  <i class="fa-brands fa-discord" id="lol" style="color: 	#7289da;"></i>
                   <i class="fa-brands fa-facebook" id="lol"></i>
                 </div>
               </div>
