added my projects

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                  <a href="#experience">Experience</a>
                 </ol>
                 <ol class="nav_link">
-                 <a href="">Projects</a>
+                 <a href="#projects">Projects</a>
                 </ol>
                 <ol class="nav_link">
                  <a href="">Contact</a>
@@ -143,6 +143,35 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section id="projects">
+        <div class="projecttext">
+            <h5 style="margin-top: 5px; margin-bottom: 5px;">Browse My Recent</h5>
+            <h1 style="margin-top: -24px; margin-bottom: 5px;">Projects</h1>
+        </div>
+        <div class="projcont">
+            <div class="projcard">
+              <img src="./images/proj1.png" alt="Photo Editor">
+              <h2>Photo Editor</h2>
+              <div class="projcard-overlay">
+                <a href="https://github.com/Sadman-123/Photo_Editor"><i class="fa-brands fa-github"  id="git"></i></a>
+              </div>
+            </div>
+            <div class="projcard">
+              <img src="./images/proj2.png" alt="Random User Generator">
+              <h2>Random User Generator</h2>
+              <div class="projcard-overlay">
+                <a href="https://github.com/Sadman-123/Randomize_user"><i class="fa-brands fa-github"  id="git"></i></a>
+              </div>
+            </div>
+            <div class="projcard">
+              <img src="./images/proj3.png" alt="Array Sorter">
+              <h2>Array Sorter</h2>
+              <div class="projcard-overlay">
+                <a href="https://github.com/Sadman-123/Array_Sorter"><i class="fa-brands fa-github" id="git"></i></a>
+              </div>
+            </div>
+          </div>          
     </section>
 </body>
 </html>
