--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                  <a href="#projects">Projects</a>
                 </ol>
                 <ol class="nav_link">
-                 <a href="">Contact</a>
+                 <a href="#contact">Contact</a>
                 </ol>
             </div>
         </div>
@@ -172,6 +172,12 @@
               </div>
             </div>
           </div>          
+    </section>
+    <section id="contact">
+        <div class="contacttext">
+            <h5 style="margin-top: 5px; margin-bottom: 5px;">Get in Touch</h5>
+            <h1 style="margin-top: -24px; margin-bottom: 5px;">Contact Me</h1>
+        </div>
     </section>
 </body>
 </html>
