Add contact form and contact information to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -178,6 +178,30 @@
             <h5 style="margin-top: 5px; margin-bottom: 5px;">Get in Touch</h5>
             <h1 style="margin-top: -24px; margin-bottom: 5px;">Contact Me</h1>
         </div>
+        <div class="contactcont">
+            <div class="contactbox">
+                <div class="contact-card">
+                    <h2>Send Me Message</h2>
+                    <form>
+                      <input type="text" class="name-field" placeholder="Your name">
+                      <br>
+                      <input type="email" class="email-field" placeholder="Your Email">
+                      <br>
+                      <textarea class="message-field" cols="30" rows="10" placeholder="Your Message"></textarea>
+                      <br>
+                      <button class="send-button">Send Message</button>
+                    </form>
+                  </div>
+            </div>
+            <div class="contactbox">
+                <div class="contact-info">
+                    <h2>Contact Information</h2>
+                    <h4><span><i class="fa-solid fa-phone"></i></span>+ 880 1764 186 880</h4>
+                    <h4><span><i class="fa-solid fa-envelope"></i></span>fareless.ranger@gmail.com</h4>
+                    <h4><i class="fa-solid fa-location-dot"></i>Mirpur,Dhaka-1216</h4>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
