Update contact-info icon color and add logo image in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section>
         <div class="navbar">
             <ol class="icon">
-                Shadman
+                <img src="./images/logo.png" alt="">
             </ol>
             <div class="links">
                 <ol class="nav_link">
@@ -198,7 +198,7 @@
                     <h2>Contact Information</h2>
                     <h4><span><i class="fa-solid fa-phone"></i></span>+ 880 1764 186 880</h4>
                     <h4><span><i class="fa-solid fa-envelope"></i></span>fareless.ranger@gmail.com</h4>
-                    <h4><i class="fa-solid fa-location-dot"></i>Mirpur,Dhaka-1216</h4>
+                    <h4><i class="fa-solid fa-location-dot"></i>Mirpur-10,Dhaka-1216</h4>
                 </div>
             </div>
         </div>
