Update contact-info icon color and add GitHub link in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                 <div class="contact-info">
                     <h2>Contact Information</h2>
                     <h4><span><i class="fa-solid fa-phone"></i></span>+ 880 1764 186 880</h4>
+                    <h4><span><i class="fa-brands fa-github"></i></span><a href="https://github.com/Sadman-123">Sadman-123</a></h4>
                     <h4><span><i class="fa-solid fa-envelope"></i></span>fareless.ranger@gmail.com</h4>
                     <h4><i class="fa-solid fa-location-dot"></i>Mirpur-10,Dhaka-1216</h4>
                 </div>
