--- a/index.html
+++ b/index.html
@@ -28,6 +28,32 @@
                 </ol>
             </div>
         </div>
+        <!-- Add a hamburger icon and a hidden navigation menu -->
+<!-- Add a hamburger icon and a hidden navigation menu -->
+<div class="navbar">
+    <div class="icon">
+        <img src="./images/logo.png" alt="">
+    </div>
+    <div class="links" id="menuLinks">
+        <ol class="nav_link">
+            <a href="#about">About</a>
+        </ol>
+        <ol class="nav_link">
+            <a href="#experience">Experience</a>
+        </ol>
+        <ol class="nav_link">
+            <a href="#projects">Projects</a>
+        </ol>
+        <ol class="nav_link">
+            <a href="#contact">Contact</a>
+        </ol>
+    </div>
+    <div class="hamburger" onclick="toggleMenu()">
+        <i class="fas fa-bars"></i> <!-- Font Awesome hamburger icon -->
+    </div>
+</div>
+
+
     </section>
     <section>
         <div class="homepage">
@@ -204,5 +230,6 @@
             </div>
         </div>
     </section>
+    <script src="./script.js"></script>
 </body>
 </html>
